# VirtualReality

./: CMakeLists.txt  README.md
CMakeModules/: FindCAVR.cmake
Demo/: CMakeLists.txt
PA1/: CMakeLists.txt
PA1/config/: example.lua
PA1/include/: Engine.h  GBuffer.h  Model.h  Program.h  Technique.h  Terrain.h  Texture.h  VRSim.h  Vertex.h  camera.h  ds_dir_light_pass_tech.h  ds_geom_pass_tech.h  graphics.h  lights.h  mesh.h  objectPaint.h  paintball.h  pointer.h  skybox.h  texBall.h
PA1/shaders/: grassGS.glsl  grassVS.glsl  model.vs
PA1/source/: Engine.cpp  GBuffer.cpp  Model.cpp  Program.cpp  Shader.cpp  Technique.cpp  Terrain.cpp  Texture.cpp  VRSim.cpp  app.cpp  camera.cpp  ds_dir_light_pass_tech.cpp  ds_geom_pass_tech.cpp  ds_point_light_pass_tech.cpp  graphics.cpp  main.cpp  mesh.cpp  objectPaint.cpp  paintball.cpp  pointer.cpp  skybox.cpp  texBall.cpp
Test/: CMakeLists.txt
Test/config/: example.lua
Test/source/: app.cpp
etc/: xorg.conf
vr/: CMakeLists.txt
vr/include/: object3d.h  scene.h  vr.h
vr/include/shapes/: sphere.h
vr/src/: object3d.cpp  scene.cpp  sphere.cpp
